--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "stop": "docker compose down",
     "db:migrate": "docker-compose exec backend npx prisma migrate dev",
     "db:migrate:status": "docker-compose exec backend npx prisma migrate status",
-    "db:generate": "docker-compose exec backend npx prisma generate"
+    "db:generate": "docker-compose exec backend npx prisma generate",
+    "db:seed": "docker-compose exec backend npx ts-node /app/src/seed/run.ts"
   },
   "repository": {
     "type": "git",
