--- a/backend/package.json
+++ b/backend/package.json
@@ -26,8 +26,10 @@
     "@nestjs/swagger": "^11.0.2",
     "@prisma/client": "^6.2.1",
     "axios": "^1.7.9",
+    "nestjs-zod": "^4.2.0",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@faker-js/faker": "^9.4.0",
