--- a/backend/package.json
+++ b/backend/package.json
@@ -23,7 +23,7 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
-    "@nestjs/swagger": "^11.0.2",
+    "@nestjs/swagger": "8.1.1",
     "@prisma/client": "^6.2.1",
     "axios": "^1.7.9",
     "nestjs-zod": "^4.2.0",
